--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,19 @@
 yarn-debug.log*
 .yarn-integrity
+.DS_Store
+.bin
+.git
+.gitignore
+.bundleignore
+.bundle
+.byebug_history
+.rspec
+tmp
+log
+test
+config/deploy
+public/packs
+public/packs-test
+node_modules
+yarn-error.log
+coverage/
