Add database host

--- a/config/database.yml
+++ b/config/database.yml
@@ -9,6 +9,7 @@ development:
   username: user_45cee60f5b86
   password: AVNS_FU4QXU37P_ZrdX1Daet
   database: db_5d90a414031e
+  host: private-dev-db-do-user-13580058-0.b.db.ondigitalocean.com:25060/db_5d90a414031e
   sslmode: require
 
 production:
@@ -16,4 +17,5 @@ production:
   username: user_45cee60f5b86
   password: AVNS_FU4QXU37P_ZrdX1Daet
   database: db_5d90a414031e
+  host: private-dev-db-do-user-13580058-0.b.db.ondigitalocean.com:25060/db_5d90a414031e
   sslmode: require
