--- a/config/database.yml
+++ b/config/database.yml
@@ -13,9 +13,13 @@ development:
   sslmode: require
 
 production:
+  development:
   <<: *default
-  username: user_45cee60f5b86
-  password: AVNS_FU4QXU37P_ZrdX1Daet
-  database: db_5d90a414031e
-  host: private-dev-db-do-user-13580058-0.b.db.ondigitalocean.com:25060/db_5d90a414031e
-  sslmode: require
+  adapter: mysql2
+  database: dev
+  username: wj8a9k3cvqabgosbxnhy
+  host: aws-eu-west-2.connect.psdb.cloud
+  password: pscale_pw_79KDOqVvrOhMsoOghadBoWwxicoBd5wYhHVAdA7nkw0
+  ssl_mode: verify_identity
+  sslca: "/etc/ssl/certs/ca-certificates.crt"
+
